@@ -6,7 +6,7 @@ AddHandler cgi-script .cgi
 
 AddDefaultCharset UTF-8
 
-DirectoryIndex index.html
+DirectoryIndex index.py
 
 RewriteEngine On
 RewriteBase /~danilo/damned-lies/
