@@ -5,6 +5,7 @@ people.xml.in
 releases.xml.in
 teams.py
 translation-teams.xml.in
+templates/index.tmpl
 templates/show-stats.tmpl
 templates/person.tmpl
 templates/list-teams.tmpl
