@@ -1,0 +1,46 @@
+<html>
+<html>
+<head><title>$_("Damned Lies about Gnome")</title>
+  <link rel="stylesheet" href="data/main.css"/>
+</head>
+<body>
+
+<center>
+<div style="width:80%; text-align: left;">
+
+<h1>$_("Damned Lies about Gnome")</h1>
+
+<table><tr><td width="50%" valign="top">
+
+<h2><a href="teams/">$_("Teams")</a></h2>
+<p>$_("List of all Gnome Translation Teams, with full information such as primary contact (coordinator), web pages and mailing list information.")
+  $_("If there is no team for your language, you can easily <a href=\"http://live.gnome.org/TranslationProject/StartingATeam/\">start your own team</a>.")
+</p>
+
+</td><td valign="top">
+
+<h2><a href="languages/">$_("Languages")</a></h2>
+<p>$_("List of all languages there are <a href=\"teams/\">Translation Teams</a> for.")
+  $_("Some teams manage more than one language (usually just simple variants), and here you can see all the languages Gnome is being translated to.")</p>
+
+</td></tr><tr><td valign="top">
+
+<h2><a href=\"releases/\">$_("Release Sets")</a></h2>
+<p>$_("List of all Gnome release sets and releases we gather stats for.")</p>
+
+<p>$_("Examples of release sets are \"Gnome Office\", \"Fifth Toe\" or \"Gnome 2.14\".")
+  $_("Official Gnome release sets are further divided into categories such as \"Desktop Applications\" and \"Developer Platform\".")</p>
+
+<p>$_("Look here if you want to compare language support in any of these release sets.")</p>
+</td><td valign="top">
+
+<h2><a href="module/">$_("Modules")</a></h2>
+<p>$_("List of all modules with statistics in here.")</p>
+
+<p>$_("Modules are separate libraries or applications, with one or more branches of development included.")
+  $_("They are usually taken from CVS, and we keep all relevant information on them (Bugzilla details, web page, maintainer information,...).")</p>
+
+</td></tr></table>
+
+</div></center>
+</body></html>
