@@ -1,3 +1,8 @@
+2007-02-05  Danilo Šegan  <danilo@gnome.org>
+
+	* POTFILES.in: Added templates/index.tmpl.
+	* sr.po: Updated Serbian translation.
+
 2007-01-29  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
