@@ -1,5 +1,11 @@
 2007-02-05  Danilo Šegan  <danilo@gnome.org>
 
+	* .htaccess: Set DirectoryIndex to index.py.
+	* index.py:
+	* templates/index.tmpl: Added.
+
+2007-02-05  Danilo Šegan  <danilo@gnome.org>
+
 	* translation-teams.xml.in: Update Galician team data.
 
 	* templates/language-release-ui-stats.tmpl: Use ui_supportedness,
